force-app/main/default/objects/Filter_Preference__c/Filter_Preference__c.object-meta.xml
<CustomObject>
    <label>Filter Preference</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Dashboard Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>