force-app/main/default/objects/Filter_Preference__c/fields/Dashboard_Filter__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dashboard Filter</label>
    <referenceTo>Dashboard_Filter__c</referenceTo>
    <relationshipLabel>Filter Preferences</relationshipLabel>
    <relationshipName>Filter_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>