force-app/main/default/objects/Filter_Preference__c/fields/Filter_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Filter_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Filter Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>