force-app/main/default/objects/Filter_Preference__c/fields/Preferred_Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Filter_Value__c</fullName>
    <description>Created as part of Heatmap to store the filter values (and also extend the character limit)</description>
    <label>Preferred Filter Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>